Updated Uzbek translation by Mashrab Kuvatov
2004-07-21  Christian Rose  <menthos@menthos.com>

	* po/uz.po, po-properties/uz.po: Updated Uzbek translation
	by Mashrab Kuvatov <kmashrab@sat.physik.uni-bremen.de>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-21  Christian Rose  <menthos@menthos.com>
+
+	* uz.po: Updated Uzbek translation by
+	Mashrab Kuvatov <kmashrab@sat.physik.uni-bremen.de>.
+
 2004-07-21  Metin Amiroff  <metin@karegen.com>
 
 	* az.po: Translation updated by Mətin Əmirov.
