--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 21 21:04:50 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktoolbar.c (gtk_toolbar_finalize): Don't leak the 
+	arrow.  (#148064, Tommi Komulainen)
+
 Tue Jul 20 22:26:29 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkfilechooserutils.h: 
