--- a/po/pa.po
+++ b/po/pa.po
@@ -1,22 +1,23 @@
+# translation of pa.po to Punjabi
 # Punjabi translation of gtk+.HEAD.
 # Copyright (C) 2004 THE gtk+.HEAD'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the gtk+.HEAD package.
 # Amanpreet Singh Alam <amanlinux@netscape.net>, 2004.
-# , fuzzy
-# 
-# 
+# Amanpreet Singh Alam <aalam@redhat.com>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+.HEAD VERSION\n"
+"Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-07-10 00:22-0400\n"
-"PO-Revision-Date: 2004-03-22 09:40+0530\n"
-"Last-Translator: Amanpreet Singh Alam <amanlinux@netscape.net>\n"
-"Language-Team: Punjabi\n"
+"PO-Revision-Date: 2004-07-23 12:15+0530\n"
+"Last-Translator: Amanpreet Singh Alam <aalam@redhat.com>\n"
+"Language-Team: Punjabi <pa@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #: gdk-pixbuf/gdk-pixbuf-animation.c:150 gdk-pixbuf/gdk-pixbuf-io.c:779
 #: gdk-pixbuf/gdk-pixbuf-io.c:926 tests/testfilechooser.c:192
@@ -32,8 +33,7 @@ msgstr "ਚਿੱਤਰ ਫਾੲਿਲ '%s' ਵਿੱਚ ਕੋੲੀ ਡਾਟ
 #: gdk-pixbuf/gdk-pixbuf-animation.c:208 gdk-pixbuf/gdk-pixbuf-io.c:831
 #: gdk-pixbuf/gdk-pixbuf-io.c:969 tests/testfilechooser.c:237
 #, c-format
-msgid ""
-"Failed to load image '%s': reason not known, probably a corrupt image file"
+msgid "Failed to load image '%s': reason not known, probably a corrupt image file"
 msgstr ""
 "ਚਿੱਤਰ '%s' ਨੰੂ ਲੋਡ ਕਰਨ ਵਿੱਚ ਅਸਫਲ: ਕਾਰਨ ਜਾਣਿਅਾ ਨਹੀ ਜਾ ਸਕਿਅਾ ਹੈ, ਸੰਭਵ ਹੈ ਕਿ ਚਿੱਤਰ ਫਾੲਿਲ "
 "ਨਿਕਾਰਾ ਹੈ"
@@ -334,8 +334,7 @@ msgstr ""
 
 #: gdk-pixbuf/io-jpeg.c:908
 #, fuzzy, c-format
-msgid ""
-"JPEG quality must be a value between 0 and 100; value '%d' is not allowed."
+msgid "JPEG quality must be a value between 0 and 100; value '%d' is not allowed."
 msgstr "ਜੇਪੀੲੀਜੀ(JPEG) ਗੁਣ ਦਾ ਮੁੱਲ  0 ਤੇ  100 ਹੋਣਾ ਜ਼ਰੂਰੀ ਹੈ ; ਮੁੱਲ '%s' ਦੀ ਮਨਜ਼ੂਰੀ ਨਹੀ ਹੈ"
 
 #: gdk-pixbuf/io-jpeg.c:1069
@@ -405,8 +404,7 @@ msgstr "ਤਬਦੀਲ ਪੀਅੈਨਜੀ(PNG) RGB ਜ੾ RGBA ਨਹੀ ਹ
 
 #: gdk-pixbuf/io-png.c:162
 msgid "Transformed PNG has unsupported number of channels, must be 3 or 4."
-msgstr ""
-"ਤਬਦੀਲ ਪੀਅੈਨਜੀ(PNG) ਵਿੱਚ ਬਿਨ-ਸਹਾੲਿਤਾ ਪ੍ਾਪਤ ਚੈਨਲ੾ ਦੀ ਗਿਣਤੀ, ੲਿਹ 3 ਜ੾ 4 ਹੋਣੀ ਜ਼ਰੂਰੀ ਹੈ ੤"
+msgstr "ਤਬਦੀਲ ਪੀਅੈਨਜੀ(PNG) ਵਿੱਚ ਬਿਨ-ਸਹਾੲਿਤਾ ਪ੍ਾਪਤ ਚੈਨਲ੾ ਦੀ ਗਿਣਤੀ, ੲਿਹ 3 ਜ੾ 4 ਹੋਣੀ ਜ਼ਰੂਰੀ ਹੈ ੤"
 
 #: gdk-pixbuf/io-png.c:183
 #, c-format
@@ -436,10 +434,8 @@ msgid "Fatal error reading PNG image file: %s"
 msgstr "ਪੀਅੈਨਜੀ(PNG) ਚਿੱਤਰ ਫਾੲਿਲ ਪੜ੏ਨ ਵਿੱਚ ਘਾਤਕ ਗਲਤੀ: %s"
 
 #: gdk-pixbuf/io-png.c:813
-msgid ""
-"Keys for PNG text chunks must have at least 1 and at most 79 characters."
-msgstr ""
-"ਪੀਅੈਨਜੀ(PNG) ਵਿੱਚ ਪਾਠ ਹੋਣ ਲੲੀ ਅੱਖਰ੾ ਦੀ ਗਿਣਤੀ ਨਿੳੂਨਤਮ 1 ਅਤੇ ਅਧਿਕਤਮ 79 ਹੋ ਸਕਦੀ ਹੈ"
+msgid "Keys for PNG text chunks must have at least 1 and at most 79 characters."
+msgstr "ਪੀਅੈਨਜੀ(PNG) ਵਿੱਚ ਪਾਠ ਹੋਣ ਲੲੀ ਅੱਖਰ੾ ਦੀ ਗਿਣਤੀ ਨਿੳੂਨਤਮ 1 ਅਤੇ ਅਧਿਕਤਮ 79 ਹੋ ਸਕਦੀ ਹੈ"
 
 #: gdk-pixbuf/io-png.c:821
 msgid "Keys for PNG text chunks must be ASCII characters."
@@ -447,10 +443,8 @@ msgstr "ਪੀਅੈਨਜੀ(PNG) ਪਾਠ ਲੲੀ ਅੱਖਰ ASCII ਅੱ
 
 #: gdk-pixbuf/io-png.c:854
 #, c-format
-msgid ""
-"Value for PNG text chunk %s can not be converted to ISO-8859-1 encoding."
-msgstr ""
-"ਪੀਅੈਨਜੀ(PNG) ਪਾਠ %s ਦਾ ਮੁੱਲ ਨੰੂ ISO-8859-1 ੲਿੰਕੋਡਿੰਗ ਵਿੱਚ ਤਬਦੀਲ ਨਹੀ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ"
+msgid "Value for PNG text chunk %s can not be converted to ISO-8859-1 encoding."
+msgstr "ਪੀਅੈਨਜੀ(PNG) ਪਾਠ %s ਦਾ ਮੁੱਲ ਨੰੂ ISO-8859-1 ੲਿੰਕੋਡਿੰਗ ਵਿੱਚ ਤਬਦੀਲ ਨਹੀ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ"
 
 #: gdk-pixbuf/io-png.c:994
 msgid "The PNG image format"
@@ -1004,8 +998,9 @@ msgid "_Remove"
 msgstr "ਹਟਾੳੁ"
 
 #: gtk/gtkfilechooserdefault.c:2714
+#, fuzzy
 msgid "Show _Hidden Files"
-msgstr ""
+msgstr "ਲੁਕਵੀਆਂ ਫਾਇਲਾਂ ਵੇਖਾਓ"
 
 #: gtk/gtkfilechooserdefault.c:2855
 msgid "Name"
@@ -1167,8 +1162,7 @@ msgstr "ਫਾੲਿਲ ਨਾੳੁ-ਤਬਦੀਲ"
 
 #: gtk/gtkfilesel.c:1439
 #, c-format
-msgid ""
-"The folder name \"%s\" contains symbols that are not allowed in filenames"
+msgid "The folder name \"%s\" contains symbols that are not allowed in filenames"
 msgstr "ਫੋਲਡਰ ਨਾੳੁ \"%s\"  ਵਿੱਚ ੳੁਹ ਨਿਸ਼ਾਨ ਹਨ ਜੋ ਕਿ ਫਾੲਿਲ ਨਾੳੁ ਵਿੱਚ ਨਹੀ ਹੋ ਸਕਦੇ"
 
 #: gtk/gtkfilesel.c:1441
@@ -1305,8 +1299,9 @@ msgstr "(ਖਾਲੀ)"
 
 #: gtk/gtkfilesystemunix.c:419 gtk/gtkfilesystemwin32.c:386
 #, c-format
+#, fuzzy
 msgid "%s: %s"
-msgstr ""
+msgstr "%s: %s"
 
 #: gtk/gtkfilesystemunix.c:426 gtk/gtkfilesystemunix.c:617
 #: gtk/gtkfilesystemwin32.c:393 gtk/gtkfilesystemwin32.c:1357
@@ -1334,10 +1329,11 @@ msgstr "ਫਾੲਿਲ '%s' ਲੲੀ ਜਾਣਕਾਰੀ ਪ੍ਾਪਤ ਕ
 
 #: gtk/gtkfilesystemunix.c:826
 #, c-format
+#, fuzzy
 msgid ""
 "The name \"%s\" is not valid because it contains the character \"%s\". "
 "Please use a different name."
-msgstr ""
+msgstr "ਨਾਂ \"%s\"  ਜਾਇਜ ਨਹੀਂ ਹੈ ਕਿਉਕ ਇਸ ਵਿੱਚ ਅੱਖਰ \"%s\" ਹੈ, ਕਿਰਪਾ ਕਰਕੇ ਵੱਖਰਾ ਨਾਂ ਵਰਤੋਂ"
 
 #: gtk/gtkfilesystemunix.c:1434 gtk/gtkfilesystemwin32.c:923
 #, c-format
@@ -1955,11 +1951,3 @@ msgstr "X ੲਿੰਪੁੱਟ ਢੰਗ"
 msgid "Could not get information for file '%s': %s"
 msgstr "ਫਾੲਿਲ '%s' ਲੲੀ ਜਾਣਕਾਰੀ ਪ੍ਾਪਤ ਕਰਨ ਵਿੱਚ ਅਸਫਲ਼: %s"
 
-#~ msgid "Unsupported TIFF variant"
-#~ msgstr "ਬਿਨ-ਸਹਾੲਿਤਾ ਪ੍ਾਪਤ ਟੀਅਾੲੀਅੈਫਅੈਫ(TIFF) ਪਰਵਰਤਨ"
-
-#~ msgid "Could not set current folder: %s"
-#~ msgstr "ਮੌਜੂਦਾ ਫੋਲਡਰ ਨੰੂ ਨਿਰਧਾਰਿਤ ਨਹੀ ਕਰ ਸਕਿਅਾ: %s"
-
-#~ msgid "%d/%b/%Y"
-#~ msgstr "%d/%b/%Y"
