--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-24  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2004-07-22  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation done by
