--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-26  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Fix for #148437. Thanks to Robert Ögren for
+	discovering the problem.
+                                                                                
 2004-07-26  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
