--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-27  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Rostislav "zbrox" Raykov <zbrox@i-space.org>
+
 2004-07-26  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Fix for #148437. Thanks to Robert Ögren for
