--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jul 31 00:42:08 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk/x11/gdkwindow-x11.c (gdk_window_set_keep_below): 
+	* gdk/x11/gdkwindow-x11.c (gdk_window_set_keep_above): Don't
+	set both states at once.  (#148789, Matthew Garret)
+
 Fri Jul 30 02:21:41 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
