--- a/po-properties/fr.po
+++ b/po-properties/fr.po
@@ -1,4 +1,4 @@
-# French translation of gtk+ 2.0.
+# French translation of gtk+-properties 2.x.
 # Copyright (C) 1998-2004 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gtk+ package.
 #
@@ -9,10 +9,10 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+_properties 2.3.2\n"
+"Project-Id-Version: gtk+_properties 2.4.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-07-10 00:22-0400\n"
-"PO-Revision-Date: 2004-02-24 19:01+0100\n"
+"POT-Creation-Date: 2004-08-01 14:07+0200\n"
+"PO-Revision-Date: 2004-08-01 11:31+0200\n"
 "Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -162,23 +162,27 @@ msgstr ""
 
 #: gtk/gtkaction.c:229 gtk/gtktoolitem.c:158
 msgid "Visible when horizontal"
-msgstr ""
+msgstr "Visible lorsque horizontal"
 
 #: gtk/gtkaction.c:230 gtk/gtktoolitem.c:159
 msgid ""
 "Whether the toolbar item is visible when the toolbar is in a horizontal "
 "orientation."
 msgstr ""
+"Indique si l'élément de la barre d'outils est visible lorsque la barre "
+"d'outils est orienté horizontalement."
 
 #: gtk/gtkaction.c:236 gtk/gtktoolitem.c:165
 msgid "Visible when vertical"
-msgstr ""
+msgstr "Visible lorsque vertical"
 
 #: gtk/gtkaction.c:237 gtk/gtktoolitem.c:166
 msgid ""
 "Whether the toolbar item is visible when the toolbar is in a vertical "
 "orientation."
 msgstr ""
+"Indique si l'élément de la barre d'outils est visible lorsque la barre "
+"d'outils est orienté verticalement."
 
 #: gtk/gtkaction.c:243 gtk/gtktoolitem.c:172
 msgid "Is important"
@@ -226,6 +230,8 @@ msgid ""
 "The GtkActionGroup this GtkAction is associated with, or NULL (for internal "
 "use)."
 msgstr ""
+"Le GtkActionGroup auquel ce GtkAction est associé, ou NULL (pour usage "
+"interne)."
 
 #: gtk/gtkactiongroup.c:134
 msgid "A name for the action group."
@@ -860,7 +866,7 @@ msgstr "Détail"
 msgid "Render detail to pass to the theme engine"
 msgstr "Détails du rendu à passer au moteur de thèmes"
 
-#: gtk/gtkcellrenderertext.c:193 gtk/gtkentry.c:550 gtk/gtkprogressbar.c:218
+#: gtk/gtkcellrenderertext.c:193 gtk/gtkentry.c:551 gtk/gtkprogressbar.c:218
 msgid "Text"
 msgstr "Texte"
 
@@ -924,7 +930,7 @@ msgstr "Couleur de premier plan"
 msgid "Foreground color as a GdkColor"
 msgstr "Couleur de premier plan en tant que GdkColor"
 
-#: gtk/gtkcellrenderertext.c:259 gtk/gtkentry.c:482 gtk/gtktexttag.c:274
+#: gtk/gtkcellrenderertext.c:259 gtk/gtkentry.c:483 gtk/gtktexttag.c:274
 #: gtk/gtktextview.c:587
 msgid "Editable"
 msgstr "Éditable"
@@ -934,7 +940,7 @@ msgid "Whether the text can be modified by the user"
 msgstr "Indique si le texte peut être modifié par l'utilisateur"
 
 #: gtk/gtkcellrenderertext.c:267 gtk/gtkcellrenderertext.c:275
-#: gtk/gtkfontsel.c:218 gtk/gtktexttag.c:282 gtk/gtktexttag.c:290
+#: gtk/gtkfontsel.c:221 gtk/gtktexttag.c:282 gtk/gtktexttag.c:290
 msgid "Font"
 msgstr "Police"
 
@@ -1377,7 +1383,7 @@ msgstr "L'élément qui est actuellement actif"
 
 #: gtk/gtkcombobox.c:511
 msgid "Appears as list"
-msgstr ""
+msgstr "Apparait en tant que liste"
 
 #: gtk/gtkcombobox.c:512
 msgid "Whether combobox dropdowns should look like lists rather than menus"
@@ -1489,44 +1495,44 @@ msgstr "Bordure de la zone d'action"
 msgid "Width of border around the button area at the bottom of the dialog"
 msgstr "Largeur de la bordure autour de la zone des boutons en bas du dialogue"
 
-#: gtk/gtkentry.c:462 gtk/gtklabel.c:370
+#: gtk/gtkentry.c:463 gtk/gtklabel.c:370
 msgid "Cursor Position"
 msgstr "Position du curseur"
 
-#: gtk/gtkentry.c:463 gtk/gtklabel.c:371
+#: gtk/gtkentry.c:464 gtk/gtklabel.c:371
 msgid "The current position of the insertion cursor in chars"
 msgstr "La position actuelle du curseur d'insertion en caractères"
 
-#: gtk/gtkentry.c:472 gtk/gtklabel.c:380
+#: gtk/gtkentry.c:473 gtk/gtklabel.c:380
 msgid "Selection Bound"
 msgstr "Limite de la sélection"
 
-#: gtk/gtkentry.c:473 gtk/gtklabel.c:381
+#: gtk/gtkentry.c:474 gtk/gtklabel.c:381
 msgid ""
 "The position of the opposite end of the selection from the cursor in chars"
 msgstr ""
 "La position de l'autre extrêmité de la sélection comptée en caractères à "
 "partir de la position du curseur."
 
-#: gtk/gtkentry.c:483
+#: gtk/gtkentry.c:484
 msgid "Whether the entry contents can be edited"
 msgstr "Indique si le contenu de l'entrée de texte peut être édité"
 
-#: gtk/gtkentry.c:490
+#: gtk/gtkentry.c:491
 msgid "Maximum length"
 msgstr "Longueur maximale"
 
-#: gtk/gtkentry.c:491
+#: gtk/gtkentry.c:492
 msgid "Maximum number of characters for this entry. Zero if no maximum"
 msgstr ""
 "Nombre maximum de caractères pour cette entrée, zéro s'il n'y a pas de "
 "maximum"
 
-#: gtk/gtkentry.c:499
+#: gtk/gtkentry.c:500
 msgid "Visibility"
 msgstr "Visibilité"
 
-#: gtk/gtkentry.c:500
+#: gtk/gtkentry.c:501
 msgid ""
 "FALSE displays the \"invisible char\" instead of the actual text (password "
 "mode)"
@@ -1534,29 +1540,29 @@ msgstr ""
 "FAUX affiche le « caractère invisible » au lieu du texte tapé (mode mot de "
 "passe)"
 
-#: gtk/gtkentry.c:507
+#: gtk/gtkentry.c:508
 msgid "Has Frame"
 msgstr "A une frame"
 
-#: gtk/gtkentry.c:508
+#: gtk/gtkentry.c:509
 msgid "FALSE removes outside bevel from entry"
 msgstr "FAUX supprime la mise en relief extérieure de l'entrée"
 
-#: gtk/gtkentry.c:515
+#: gtk/gtkentry.c:516
 msgid "Invisible character"
 msgstr "Caractère invisible"
 
-#: gtk/gtkentry.c:516
+#: gtk/gtkentry.c:517
 msgid "The character to use when masking entry contents (in \"password mode\")"
 msgstr ""
 "Caractère à utiliser pour masquer le contenu d'une entrée (en « mode mot de "
 "passe »)"
 
-#: gtk/gtkentry.c:523
+#: gtk/gtkentry.c:524
 msgid "Activates default"
 msgstr "Activer les valeurs par défaut"
 
-#: gtk/gtkentry.c:524
+#: gtk/gtkentry.c:525
 msgid ""
 "Whether to activate the default widget (such as the default button in a "
 "dialog) when Enter is pressed"
@@ -1565,42 +1571,42 @@ msgstr ""
 "défaut dans une boîte de dialogue) doit être activé quand l'utilisateur "
 "appuie sur Entrée"
 
-#: gtk/gtkentry.c:530
+#: gtk/gtkentry.c:531
 msgid "Width in chars"
 msgstr "Largeur en caractères"
 
-#: gtk/gtkentry.c:531
+#: gtk/gtkentry.c:532
 msgid "Number of characters to leave space for in the entry"
 msgstr "Nombre de caractères d'espace à laisser pour cette entrée"
 
-#: gtk/gtkentry.c:540
+#: gtk/gtkentry.c:541
 msgid "Scroll offset"
 msgstr "Décalage du défilement"
 
-#: gtk/gtkentry.c:541
+#: gtk/gtkentry.c:542
 msgid "Number of pixels of the entry scrolled off the screen to the left"
 msgstr "Nombre de pixels de l'entrée à défiler hors de l'écran vers la gauche"
 
-#: gtk/gtkentry.c:551
+#: gtk/gtkentry.c:552
 msgid "The contents of the entry"
 msgstr "Le contenu de l'entrée"
 
-#: gtk/gtkentry.c:558 gtk/gtkmisc.c:99
+#: gtk/gtkentry.c:559 gtk/gtkmisc.c:99
 msgid "X align"
 msgstr "Alignement X"
 
-#: gtk/gtkentry.c:559 gtk/gtkmisc.c:100
+#: gtk/gtkentry.c:560 gtk/gtkmisc.c:100
 #, fuzzy
 msgid ""
 "The horizontal alignment, from 0 (left) to 1 (right). Reversed for RTL "
 "layouts"
 msgstr "Alignement horizontal, de 0 (gauche) à 1 (droite)"
 
-#: gtk/gtkentry.c:792
+#: gtk/gtkentry.c:793
 msgid "Select on focus"
 msgstr "Sélection sur le focus"
 
-#: gtk/gtkentry.c:793
+#: gtk/gtkentry.c:794
 msgid "Whether to select the contents of an entry when it is focused"
 msgstr ""
 "Indique si le contenu de l'entrée de texte doit être sélectionné quand elle "
@@ -1747,13 +1753,14 @@ msgstr ""
 "personnalisés doit être affiché."
 
 #: gtk/gtkfilechooser.c:212
-#, fuzzy
 msgid "Use Preview Label"
-msgstr "Utiliser la taille dans l'étiquette"
+msgstr "Utiliser une étiquette de prévisualisation"
 
 #: gtk/gtkfilechooser.c:213
 msgid "Whether to display a stock label with the name of the previewed file."
 msgstr ""
+"Indique si il faut afficher l'étiquette prédéfinie avec le nom du fichier "
+"prévisualisé."
 
 #: gtk/gtkfilechooser.c:218
 msgid "Extra widget"
@@ -1781,14 +1788,13 @@ msgstr "Afficher les éléments cachés"
 msgid "Whether the hidden files and folders should be displayed"
 msgstr "Indique si les fichiers et dossiers cachés doivent être affichés"
 
-#: gtk/gtkfilechooserdefault.c:563
+#: gtk/gtkfilechooserdefault.c:569
 msgid "Default file chooser backend"
-msgstr ""
+msgstr "Moteur par défaut du sélecteur de fichiers"
 
-#: gtk/gtkfilechooserdefault.c:564
-#, fuzzy
+#: gtk/gtkfilechooserdefault.c:570
 msgid "Name of the GtkFileChooser backend to use by default"
-msgstr "Nom du moteur du système de fichiers à utiliser"
+msgstr "Nom du moteur du sélecteur de fichiers à utiliser par défaut"
 
 #: gtk/gtkfilesel.c:559 gtk/gtkimage.c:168
 msgid "Filename"
@@ -1832,7 +1838,7 @@ msgstr "Position en Y du composant graphique fils"
 msgid "The title of the font selection dialog"
 msgstr "Le titre de la boîte de dialogue de sélection de polices"
 
-#: gtk/gtkfontbutton.c:191 gtk/gtkfontsel.c:211
+#: gtk/gtkfontbutton.c:191 gtk/gtkfontsel.c:214
 msgid "Font name"
 msgstr "Nom de la police"
 
@@ -1881,19 +1887,19 @@ msgstr ""
 "Indique si la taille de la police sélectionnée est affichée dans l'étiquette "
 "ou non"
 
-#: gtk/gtkfontsel.c:212
+#: gtk/gtkfontsel.c:215
 msgid "The X string that represents this font"
 msgstr "La chaîne X qui représente cette police"
 
-#: gtk/gtkfontsel.c:219
+#: gtk/gtkfontsel.c:222
 msgid "The GdkFont that is currently selected"
 msgstr "GdkFont actuellement sélectionnée"
 
-#: gtk/gtkfontsel.c:225
+#: gtk/gtkfontsel.c:228
 msgid "Preview text"
 msgstr "Texte d'aperçu"
 
-#: gtk/gtkfontsel.c:226
+#: gtk/gtkfontsel.c:229
 msgid "The text to display in order to demonstrate the selected font"
 msgstr "Le texte à afficher pour tester la police sélectionnée"
 
@@ -2192,6 +2198,8 @@ msgid ""
 "When the menu is a submenu, position it this number of pixels offset "
 "vertically"
 msgstr ""
+"Quand le menu est un sous-menu, le décaler verticalement de ce nombre de "
+"pixels"
 
 #: gtk/gtkmenu.c:543
 msgid "Horizontal Offset"
@@ -2202,6 +2210,8 @@ msgid ""
 "When the menu is a submenu, position it this number of pixels offset "
 "horizontally"
 msgstr ""
+"Quand le menu est un sous-menu, le décaler horizontalement de ce nombre de "
+"pixels"
 
 #: gtk/gtkmenu.c:554
 msgid "Left Attach"
@@ -2305,6 +2315,8 @@ msgstr "Utiliser un séparateur"
 msgid ""
 "Whether to put a separator between the message dialog's text and the buttons"
 msgstr ""
+"Indique si il faut mettre un séparateur entre le texte de la boîte de "
+"dialogue et les boutons"
 
 #: gtk/gtkmessagedialog.c:130
 msgid "Message Type"
@@ -2570,15 +2582,16 @@ msgstr "Redimensionner"
 #: gtk/gtkpaned.c:309
 msgid "If TRUE, the child expands and shrinks along with the paned widget"
 msgstr ""
+"Si VRAI, le fils peut s'agrandir ou se diminuer avec le composant graphique "
+"dans lequel il est intégré"
 
 #: gtk/gtkpaned.c:324
-#, fuzzy
 msgid "Shrink"
-msgstr "Autoriser la compression"
+msgstr "Compresser"
 
 #: gtk/gtkpaned.c:325
 msgid "If TRUE, the child can be made smaller than its requisition"
-msgstr ""
+msgstr "Si VRAI, le fils peut être plus petit que demandé"
 
 #: gtk/gtkpreview.c:133
 msgid ""
@@ -2722,6 +2735,8 @@ msgid ""
 "The value returned by gtk_radio_action_get_current_value() when this action "
 "is the current action of its group."
 msgstr ""
+"La valeur retournée par gtk_radio_action_get_current_value() quand cette "
+"action est l'action courante de son groupe."
 
 #: gtk/gtkradioaction.c:155 gtk/gtkradiobutton.c:112
 msgid "Group"
@@ -2960,12 +2975,11 @@ msgstr ""
 
 #: gtk/gtkseparatortoolitem.c:135
 msgid "Draw"
-msgstr ""
+msgstr "Dessiner"
 
 #: gtk/gtkseparatortoolitem.c:136
-#, fuzzy
 msgid "Whether the separator is drawn, or just blank"
-msgstr "Indique si les espaces sont des lignes verticales ou juste des blancs"
+msgstr "Indique si le séparateur est dessiné ou juste un blanc"
 
 #: gtk/gtksettings.c:262
 msgid "Double Click Time"
@@ -3029,11 +3043,11 @@ msgstr "Nom du fichier RC de thème à charger"
 
 #: gtk/gtksettings.c:310
 msgid "Icon Theme Name"
-msgstr "Nom du thème d'icône"
+msgstr "Nom du thème d'icônes"
 
 #: gtk/gtksettings.c:311
 msgid "Name of icon theme to use"
-msgstr "Nom du thème d'icône à utiliser"
+msgstr "Nom du thème d'icônes à utiliser"
 
 #: gtk/gtksettings.c:319
 msgid "Key Theme Name"
@@ -3077,43 +3091,46 @@ msgstr "Liste des tailles d'icônes (gtk-menu=16,16;gtk-button=20,20..."
 
 #: gtk/gtksettings.c:365
 msgid "Xft Antialias"
-msgstr ""
+msgstr "Anti-crénelage Xft"
 
 #: gtk/gtksettings.c:366
 msgid "Whether to antialias Xft fonts; 0=no, 1=yes, -1=default"
 msgstr ""
+"Indique si il faut anti-créneler les polices Xft ; 0=non, 1=oui, -1=défaut"
 
 #: gtk/gtksettings.c:375
 msgid "Xft Hinting"
-msgstr ""
+msgstr "Hinting Xft"
 
 #: gtk/gtksettings.c:376
 msgid "Whether to hint Xft fonts; 0=no, 1=yes, -1=default"
-msgstr ""
+msgstr "Indique si il faut hinter les polices Xft ; 0=non, 1=oui, -1=défaut"
 
 #: gtk/gtksettings.c:385
 msgid "Xft Hint Style"
-msgstr ""
+msgstr "Style de hinting Xft"
 
 #: gtk/gtksettings.c:386
 msgid "What degree of hinting to use; none, slight, medium, or full"
-msgstr ""
+msgstr "Quel degré de hinting utiliser ; none, slight, medium, ou full"
 
 #: gtk/gtksettings.c:395
 msgid "Xft RGBA"
-msgstr ""
+msgstr "RVBA Xft"
 
 #: gtk/gtksettings.c:396
 msgid "Type of subpixel antialiasing; none, rgb, bgr, vrgb, vbgr"
-msgstr ""
+msgstr "Type d'anti-crénelage de sous-pixels ; none, rgb, bgr, vrgb, vbgr"
 
 #: gtk/gtksettings.c:405
 msgid "Xft DPI"
-msgstr ""
+msgstr "ppp Xft"
 
 #: gtk/gtksettings.c:406
 msgid "Resolution for Xft, in 1024 * dots/inch. -1 to use default value"
 msgstr ""
+"Résolution pour Xft, en 1024 * points/pouce. -1 pour utiliser la valeur par "
+"défaut"
 
 #: gtk/gtksizegroup.c:242
 msgid "Mode"
@@ -3693,14 +3710,12 @@ msgid "Whether Tab will result in a tab character being entered"
 msgstr "Indique si la touche tabulation insère un caractère tabulation"
 
 #: gtk/gtktextview.c:685
-#, fuzzy
 msgid "Error underline color"
-msgstr "Couleur de premier plan"
+msgstr "Couleur du soulignement des erreurs"
 
 #: gtk/gtktextview.c:686
-#, fuzzy
 msgid "Color with which to draw error-indication underlines"
-msgstr "Couleur utilisée pour dessiner le curseur d'insertion"
+msgstr "Couleur utilisée pour dessiner le soulignement indiquant des erreurs"
 
 #: gtk/gtktoggleaction.c:129
 #, fuzzy
@@ -3749,16 +3764,15 @@ msgid "If an arrow should be shown if the toolbar doesn't fit"
 msgstr "Si une flèche doit être affichée si la barre d'outils ne rentre pas"
 
 #: gtk/gtktoolbar.c:526
-#, fuzzy
 msgid "Whether the item should receive extra space when the toolbar grows"
 msgstr ""
-"Indique si le fils doit recevoir de l'espace supplémentaire lorsque le "
-"parent grandit"
+"Indique si l'élément doit recevoir de l'espace supplémentaire lorsque la "
+"barre d'outils grandit"
 
 #: gtk/gtktoolbar.c:534
-#, fuzzy
 msgid "Whether the item should be the same size as other homogeneous items"
-msgstr "Indique si les fils doivent tous avoir la même taille"
+msgstr ""
+"Indique si l'élément doit être de la même taille que les autres éléments"
 
 #: gtk/gtktoolbar.c:541
 msgid "Spacer size"
@@ -4560,16 +4574,3 @@ msgstr "Style d'état IM"
 #: modules/input/gtkimcontextxim.c:340
 msgid "How to draw the input method statusbar"
 msgstr "Comment dessiner la barre d'état de la méthode de saisie"
-
-#~ msgid "ComboBox appareance"
-#~ msgstr "Apparence de la ComboBox"
-
-#~ msgid "Folder Mode"
-#~ msgstr "Mode du dossier"
-
-#~ msgid "Whether to select folders rather than files"
-#~ msgstr ""
-#~ "Indique si il faut sélectionner des dossiers plutôt que des fichiers"
-
-#~ msgid "File system object to use"
-#~ msgstr "Objet du système de fichiers à utiliser"
