Updated Simplified Chinese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-02  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-08-01  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
