--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-03  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-08-02  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
