--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-04  Pablo Saratxaga <pablo@mandrakesoft.com>
+
+	* br.po,wa.po: Updated Breton and Walloon files.
+
 2004-08-03  Laszlo Dvornik  <dvornik@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
