--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-28  Robert Ögren  <gtk@roboros.com>
+
+	* gdk/win32/gdkinput-win32.c (_gdk_input_other_event): Set x_root
+	and y_root in button and motion events from the tablet. (#148715)
+
 Tue Aug  3 20:03:33 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkuimanager.c (get_node): Make gtk_ui_manager_add_ui()
