--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po, sr@ije.po: Updated Serbian translations.
+
 2004-08-04  Pablo Saratxaga <pablo@mandrakesoft.com>
 
 	* br.po,wa.po: Updated Breton and Walloon files.
