--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-07  Tor Lillqvist  <tml@iki.fi>
 
+	* gdk/win32/gdkevents-win32.c (handle_configure_event,
+	gdk_event_translate:WM_WINDOWPOSCHANGED): Add _gdk_offset_{x,y} to
+	top-level window coordinates, not just in generated
+	events. (#148526, Robert Ögren)
+
 	Merge from HEAD:
 
 	* gdk/win32/gdkwindow-win32.c (gdk_window_new): Backward
