--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-09  Sanlig Badral  <badral@openmn.org>
+
+	* mn.po: Updated Mongolian translation.
+
 2004-08-06  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po, sr@ije.po: Updated Serbian translations.
