Added Old English translation.
2004-08-09  David Lodge <dave@cirt.net>

        * ang.po: Added Old English translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-09  David Lodge <dave@cirt.net>
+
+	* ang.po: Added Old English translation.
+
 2004-08-09  Sanlig Badral  <badral@openmn.org>
 
 	* mn.po: Updated Mongolian translation.
