--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Added correctly named file.
+
 2004-08-09  David Lodge <dave@cirt.net>
 
 	* ang.po: Added Old English translation.
