--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Aug 11 19:17:28 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktreeview.c (gtk_tree_view_maybe_begin_dragging_row): 
+	Don't start a drag if the treeview is only a 
+	drag destination.  (#149836, Pawel Salek)
+
 2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Added nb to ALL_LINGUAS.
