Add the file here too.
2004-08-12  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Add the file here too.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-12  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Add the file here too.
+
 2004-08-01  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
