--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-12  Matthias Clasen  <mclasen@redhat.com>
+
+	* pixops/pixops.c: Remove C99-isms.  (#149967, Vincent Noel)
+
 2004-08-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* pixops/pixops.c: Make scaling and compositing functions handle
